<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:label="@string/prijava"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorLightPink"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_login" />

    <EditText
    android:id="@+id/email"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="200dp"
    android:layout_gravity="center_horizontal"
    android:inputType="textEmailAddress"
    android:hint="@string/email"
    android:text=""
    android:textColorHint="@color/colorDark"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/lozinka"
        android:text=""
        android:textColorHint="@color/colorDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:contentDescription="@string/opis_prijave"
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorDark"
        android:textColor="@color/colorLight"
        android:text="@string/prijava" />

    <TextView
        android:id="@+id/prijavatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nema_racun"
        android:textColor="@color/colorDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/prijavatext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_ovdje"
        android:textColor="@color/colorDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="580dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>