<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_register"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment">


    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/korisnicko_ime"
        android:inputType="text"
        android:text=""
        android:textColorHint="@color/colorDark"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/username"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/ime"
        android:inputType="text"
        android:text=""
        android:textColorHint="@color/colorDark"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/prezime"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/first_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:text=""
        android:textColorHint="@color/colorDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/last_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/datum_rodenja"
        android:textColorHint="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <ImageView
        android:id="@+id/date_icon"
        android:src="@mipmap/ic_date"
        android:layout_below="@+id/last_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="@+id/birth_date"
        app:layout_constraintEnd_toEndOf="@+id/birth_date" />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/birth_date"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColorHint="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        android:text=""
        android:textColorHint="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password_repeat"
        android:layout_below="@+id/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/ponovite_lozinku"
        android:inputType="textPassword"
        android:text=""
        android:textColorHint="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/registration"
        android:layout_below="@+id/password_repeat"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorDark"
        android:text="@string/registracija"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/registration_text"
        android:layout_below="@+id/registration"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vec_ste_registrirani"
        android:textColor="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/registration"/>

    <TextView
        android:id="@+id/login"
        android:layout_below="@+id/registration_text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/prijavite_se_ovdje"
        android:textStyle="bold"
        android:textColor="@color/colorDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/registration_text"
        app:layout_constraintVertical_bias="0.158" />

</RelativeLayout>