<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zaboravljena_lozinka_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.ZaboravljenaLozinkaFragment">

    <TextView
        android:id="@+id/text_zaboravljena_lozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:text="@string/zaboravljena_lozinka_opis"
        android:textColor="@color/colorDark" />

    <EditText
        android:id="@+id/email_zaboravljena_lozinka"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/text_zaboravljena_lozinka"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="@color/colorDark" />

    <Button
        android:id="@+id/button_spremi_zaboravljena_lozinka"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_zaboravljena_lozinka"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorDark"
        android:text="@string/spremi"
        android:textColor="@color/colorLight" />

    <TextView
        android:id="@+id/prijava_zaboravljena_lozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_spremi_zaboravljena_lozinka"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:text="@string/prijavite_se_ovdje"
        android:textColor="@color/colorDark"
        android:textStyle="bold" />

</RelativeLayout>
