<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/naslov_knjige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/naslov_knjige"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false"

            />
        <TextView
            android:id="@+id/opis_knjige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/opis_knjige"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false"

            />

        <ImageView
            android:id="@+id/slika_knjige"
            android:layout_width="94dp"
            android:layout_height="105dp"
            android:contentDescription="@string/slika_knjige"
            android:src="@mipmap/ic_launcher" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>