<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/slika_znacke"
            android:layout_width="94dp"
            android:layout_height="105dp"
            android:contentDescription="@string/slika_znacke"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/naziv_znacke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/naziv_znacke"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false"

            />

        <TextView
            android:id="@+id/opis_znacke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/naziv_znacke"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:text="@string/opis_znacke"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>