<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/slika_knjige_trenutno"
            android:layout_width="94dp"
            android:layout_height="105dp"
            android:contentDescription="@string/slika_knjige"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/naslov_knjige_trenutno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/naslov_knjige"
            android:textSize="18sp"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false"

            />

        <TextView
            android:id="@+id/autor_knjige_trenutno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/naslov_knjige_trenutno"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:text="@string/autor_knjige"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            android:textColor="@color/colorDark"
            android:textIsSelectable="false" />
        <LinearLayout
            android:id="@+id/ll_pocetaktren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/autor_knjige_trenutno">
            <TextView
                android:id="@+id/pocetak_trenutno_citam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/pocetak_citanja"
                android:textColor="@color/colorDark" />

            <TextView
                android:id="@+id/pocetakcitanja_trenutno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/colorDark" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>